--- a/jenkins_script/Jenkinsfile
+++ b/jenkins_script/Jenkinsfile
@@ -1,1 +1,20 @@
-
+pipeline {  
+    agent any  
+    stages {  
+            stage ('Build') {  
+                echo 'build started'
+            }  
+            stage ('Test') {  
+                echo 'test started'
+            }  
+            stage ('QA') {  
+                echo 'its qa' 
+            }  
+            stage ('Deploy') {  
+                echo 'deploy'
+            }  
+            stage ('Monitor') {  
+                echo 'monitor'
+            }  
+    }  
+}  
